Stop ads overflowing into article images

--- a/app/assets/stylesheets/_common-ui/_stack_articles.sass
+++ b/app/assets/stylesheets/_common-ui/_stack_articles.sass
@@ -102,6 +102,7 @@
   margin-bottom: 50px
 
 .stack__article__image-container
+  clear: both
   text-align: center
 
 .col--mpu
